# platform/src/assets/schemas/maintenance.api_docsListRes.json
@@ -29,48 +29,26 @@
                 "type": "number",
                 "minimum": 1
               },
-              "taskKey": {
-                "type": "string",
-                "maxLength": 100
-              },
               "name": {
                 "type": "string",
                 "maxLength": 100
+              },
+              "version": {
+                "type": ["string", "null"],
+                "nullable": true,
+                "maxLength": 50
               },
               "description": {
                 "type": ["string", "null"],
                 "nullable": true,
                 "maxLength": 500
               },
-              "baseUrl": {
+              "docType": {
                 "type": "string",
-                "maxLength": 500
+                "enum": ["swagger2.0", "openapi3.0", "openapi3.1"]
               },
-              "path": {
-                "type": "string",
-                "maxLength": 500
-              },
-              "method": {
-                "type": "string",
-                "enum": ["GET", "POST", "PUT", "PATCH", "DELETE"]
-              },
-              "headers": {
-                "type": ["string", "null"],
-                "nullable": true
-              },
-              "requestSchema": {
-                "type": ["string", "null"],
-                "nullable": true
-              },
-              "responseSchema": {
-                "type": ["string", "null"],
-                "nullable": true
-              },
-              "timeoutMs": {
-                "type": "number"
-              },
-              "isEnabled": {
-                "type": "boolean"
+              "content": {
+                "type": "string"
               },
               "creatorId": {
                 "type": "number"
@@ -89,17 +67,11 @@
             },
             "required": [
               "id",
-              "taskKey",
               "name",
+              "version",
               "description",
-              "baseUrl",
-              "path",
-              "method",
-              "headers",
-              "requestSchema",
-              "responseSchema",
-              "timeoutMs",
-              "isEnabled",
+              "docType",
+              "content",
               "creatorId",
               "createTimeUtc",
               "updaterId",
